--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -31,4 +31,4 @@ jobs:
       run: |
         pip install pytest pytest-cov pytest-xdist codecov
         pytest --cov=moneypy
-        codecov
+        codecov -t $CODECOV_TOKEN
